--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ h5py==3.2.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 Keras==2.2.4
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
 numpy==1.20.3
 Pillow==8.2.0
 protobuf==3.17.0
